--- a/Inutivent-iOS/Main.storyboard
+++ b/Inutivent-iOS/Main.storyboard
@@ -152,10 +152,10 @@
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="zDI-3v-LWJ" secondAttribute="trailing" constant="20" id="3Xo-SB-6RR"/>
-                            <constraint firstItem="zDI-3v-LWJ" firstAttribute="top" secondItem="DNM-l6-TVR" secondAttribute="bottom" constant="8" id="8c2-bv-muO"/>
+                            <constraint firstItem="zDI-3v-LWJ" firstAttribute="top" secondItem="NXj-h3-zOq" secondAttribute="top" constant="28" id="A5T-2h-OjF"/>
                             <constraint firstItem="D0e-Uw-oKt" firstAttribute="top" secondItem="zDI-3v-LWJ" secondAttribute="bottom" constant="8" id="B9P-ue-fi3"/>
+                            <constraint firstAttribute="bottom" secondItem="VFX-fJ-kpg" secondAttribute="bottom" id="E6Q-kd-p2I"/>
                             <constraint firstItem="VFX-fJ-kpg" firstAttribute="top" secondItem="D0e-Uw-oKt" secondAttribute="bottom" id="KrG-w7-qsx"/>
-                            <constraint firstItem="YMb-t0-J98" firstAttribute="top" secondItem="VFX-fJ-kpg" secondAttribute="bottom" id="d5f-Wa-4lX"/>
                             <constraint firstAttribute="trailing" secondItem="D0e-Uw-oKt" secondAttribute="trailing" constant="16" id="gA2-Y9-BVN"/>
                             <constraint firstAttribute="centerX" secondItem="VFX-fJ-kpg" secondAttribute="centerX" id="pqj-VT-AT4"/>
                             <constraint firstItem="D0e-Uw-oKt" firstAttribute="leading" secondItem="NXj-h3-zOq" secondAttribute="leading" constant="16" id="uVm-wY-gK9"/>
@@ -168,7 +168,6 @@
                         <outlet property="skipButton" destination="VFX-fJ-kpg" id="EA8-RP-Q6m"/>
                         <outlet property="skipButtonHeightConstraint" destination="Dmg-Q2-Nnf" id="NHD-ZX-OsF"/>
                         <outlet property="textLabel" destination="zDI-3v-LWJ" id="LqB-xP-gap"/>
-                        <outlet property="topLayoutConstraint" destination="8c2-bv-muO" id="DgG-zv-JCl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P4k-J4-OSp" userLabel="First Responder" sceneMemberID="firstResponder"/>
